--- a/src/main/resources/templates/emailUser.html
+++ b/src/main/resources/templates/emailUser.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 
-<h1>Write an email</h1>
+<h1>Напиши письмо</h1>
 
 <form action="#" th:action="@{/emailUser}"  method="post">
-    <p>To: <input type="text" name="to"/></p>
-    <p>Subject: <input type="text" name="subject"/></p>
-    <p>Text of email: <textarea rows = "6" name="text"></textarea></p>
+    <p>Кому: <input type="text" name="to"/></p>
+    <p>Тема: <input type="text" name="subject"/></p>
+    <p>Текст сообщения: <textarea rows = "6" name="text"></textarea></p>
 
-    <p><input type="submit" value="Send" /> </p>
-    <p><a href="/welcomePage">Go back to WELCOME PAGE</a></p>
+    <p><input type="submit" value="Отправить" /> </p>
+    <p><a href="/welcomePage">На главную страницу</a></p>
 
 </form>
 
