--- a/src/main/resources/templates/successfully.html
+++ b/src/main/resources/templates/successfully.html
@@ -6,9 +6,9 @@
     <link th:href="@{/style/style1.css}" rel="stylesheet" />
 </head>
 <body>
-<h1>Successfully!</h1>
-<p th:text="'You added a new user!'" />
+<h1>Удачно!</h1>
+<p th:text="'Вы добавили нового пользователя'" />
 
-<p><a href="/welcomePage">Go back to WELCOME PAGE</a></p>
+<p><a href="/welcomePage">На главную страницу</a></p>
 </body>
 </html>
