--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -6,10 +6,10 @@
     <link th:href="@{/style/style1.css}" rel="stylesheet" />
 </head>
 <body>
-<h1>Positive</h1>
-<p th:text="'We have sent an email to your friend'" />
+<h1>Всё хорошо</h1>
+<p th:text="'Ваше письмо было отправлено)'" />
 
-<p ><a href="/emailUser">Send another message</a></p>
-<p><a href="/welcomePage">Go back to WELCOME PAGE</a></p>
+<p ><a href="/emailUser">Отправить ещё одно письмо</a></p>
+<p><a href="/welcomePage">На главную страницу</a></p>
 </body>
 </html>
