--- a/src/main/resources/templates/searchUser.html
+++ b/src/main/resources/templates/searchUser.html
@@ -6,12 +6,12 @@
     <link th:href="@{/style/style1.css}" rel="stylesheet" />
 </head>
 <body>
-<h1>Form for searching</h1>
+<h1>Поиск пользователя</h1>
 <form action="#" th:action="@{/searchUser}" th:object="${searchUser}" method="post">
-    <p>Surname: <input type="text" required th:field="*{surname}" /></p>
-    <p>Name: <input type="text" required th:field="*{name}" /></p>
-    <p><input type="submit" value="Search" />
-    <p><a href="/welcomePage">Go back to WELCOME PAGE</a></p>
+    <p>Фамилия: <input type="text" required th:field="*{surname}" /></p>
+    <p>Имя: <input type="text" required th:field="*{name}" /></p>
+    <p><input type="submit" value="Поиск" />
+    <p><a href="/welcomePage">На главную страницу</a></p>
 
 </form>
 </body>
