--- a/src/main/resources/templates/userFromFile.html
+++ b/src/main/resources/templates/userFromFile.html
@@ -6,14 +6,14 @@
     <link th:href="@{/style/style1.css}" rel="stylesheet" />
 </head>
 <body>
-<h1>Upload File </h1>
+<h1>Загрузить пользователя из файла </h1>
 <p th:text="${message}" th:if="${message ne null}" class="alert alert-primary"></p>
 <form method="post" th:action="@{/userFromFile}" enctype="multipart/form-data">
     <div class="form-group">
         <input type="file" name="file" class="form-control-file">
     </div>
-    <button type="submit" class="btn btn-primary">Upload File</button>
-    <p><a href="/welcomePage">Go back to WELCOME PAGE</a></p>
+    <button type="submit" class="btn btn-primary">Загрузить файл</button>
+    <p><a href="/welcomePage">На главную страницу</a></p>
 </form>
 </body>
 </html>
