--- a/src/main/resources/templates/welcomePage.html
+++ b/src/main/resources/templates/welcomePage.html
@@ -6,15 +6,15 @@
     <link th:href="@{/style/style1.css}" rel="stylesheet" />
 </head>
 <body>
-<h1>Welcome!</h1>
+<h1>Добро пожаловать!</h1>
 
-<p >Do you want to add user <a href="/user">manually</a> or <a href="/userFromFile"> from your file</a>?</p>
-
-
-<p >Do you want to <a href="/searchUser">find someone</a> ? </p>
+<p >Вы хотите добавить пользователя <a href="/user">вручную</a> или <a href="/userFromFile"> из файла </a>?</p>
 
 
-<p >Do you want to <a href="/emailUser">write an email</a> ? </p>
+<p >Вы хотите <a href="/searchUser">найти пользователя</a> ? </p>
+
+
+<p >Вы хотите <a href="/emailUser">написать email</a> ? </p>
 
 </body>
 </html>
